--- a/BlogTravelWebApp/src/app/pages/home/components/info-thais/info-thais.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/info-thais/info-thais.component.html
@@ -1,14 +1,14 @@
 <div fxLayout="row" fxLayoutAlign="start center" style="padding-left: 40px;">
-  <md-card fxFlex.sm="90" fxFlex.md="90" fxFlex.lg="80" fxFlex.xl="80">
-    <img md-card-image src="../../../assets/images/people/thais-home.jpg">
-    <md-card-content>
+  <mat-card fxFlex.sm="90" fxFlex.md="90" fxFlex.lg="80" fxFlex.xl="80">
+    <img mat-card-image src="../../../assets/images/people/thais-home.jpg">
+    <mat-card-content>
         <span class="txt-aboutme">
             Futura nutricionista, apaixonada por viajar e com uma queda pelos Estados Unidos. 
             Aqui eu vou compartilhar de tudo, e espero ajudar de qualquer forma <3
         </span>
         <!-- <button md-button>Saiba mais</button> -->
-    </md-card-content>
-    <md-card-actions>
+    </mat-card-content>
+    <mat-card-actions>
       <div fxLayout="row" fxLayoutAlign="center center">     
         <div fxLayout="row" fxLayoutAlign="center center">
             <a (click)="snapchat()" class="redes-sociais-thais" style="CURSOR: POINTER">
@@ -28,6 +28,6 @@
             </a>
         </div>
       </div>
-    </md-card-actions>
-  </md-card>
+    </mat-card-actions>
+  </mat-card>
 </div>
