--- a/BlogTravelWebApp/src/app/app.component.html
+++ b/BlogTravelWebApp/src/app/app.component.html
@@ -1,48 +1,48 @@
 <div fxLayout="row" [style.md]="{display: 'none'}" [style.md]="{display: 'none'}" [style.lg]="{display: 'none'}" [style.xl]="{display: 'none'}">
     <div fxLayout="row" class="nav-bar-mobile">
-        <md-toolbar id="menu-mobile" style="background: #1bbc9b;position: fixed; width: 100%  !important;">
-            <button md-icon-button (click)="sidenav.toggle(); blockMenu()">
-            <md-icon style="color: #fff;">menu</md-icon>
+        <mat-toolbar id="menu-mobile" style="background: #1bbc9b;position: fixed; width: 100%  !important;">
+            <button mat-icon-button (click)="sidenav.toggle(); blockMenu()">
+            <mat-icon style="color: #fff;">menu</mat-icon>
         </button>
-        </md-toolbar>
+        </mat-toolbar>
     </div>
-    <md-sidenav-container (backdropClick)="check()" style="position: fixed; flex-shrink: 0" fxFlex>
-        <md-sidenav #sidenav fxFlex>
+    <mat-sidenav-container (backdropClick)="check()" style="position: fixed; flex-shrink: 0" fxFlex>
+        <mat-sidenav #sidenav fxFlex>
             <app-header-sidenav></app-header-sidenav>
-            <md-nav-list>
-                <a md-list-item [routerLink]="['/']" (click)="sidenav.toggle(); activeMenu()">
-                    <md-icon>home</md-icon>&nbsp;&nbsp; Home
+            <mat-nav-list>
+                <a mat-list-item [routerLink]="['/']" (click)="sidenav.toggle(); activeMenu()">
+                    <mat-icon>home</mat-icon>&nbsp;&nbsp; Home
                 </a>
-            </md-nav-list>
-            <md-nav-list>
-                <button md-list-item md-button [mdMenuTriggerFor]="categoria" [routerLink]="['/']" style="font-size: 16px;">
-                Categorias &nbsp;&nbsp; <md-icon>&#xE313;</md-icon>
+            </mat-nav-list>
+            <mat-nav-list>
+                <button mat-list-item mat-button [matMenuTriggerFor]="categoria" [routerLink]="['/']" style="font-size: 16px;">
+                Categorias &nbsp;&nbsp; <mat-icon>&#xE313;</mat-icon>
             </button>
-                <md-menu #categoria="mdMenu">
-                    <button md-menu-item class="btn-menu-item" (click)="sidenav.toggle(); activeMenu()">Categoria 1</button>
-                    <button md-menu-item class="btn-menu-item" (click)="sidenav.toggle(); activeMenu()">Categoria 2</button>
-                </md-menu>
-            </md-nav-list>
-            <md-divider></md-divider>
-            <md-list>
-                <h3 md-subheader>Redes sociais</h3>
-                <md-nav-list style="padding-top: 0px;">
-                    <a md-list-item href="https://www.instagram.com/trindadethais/" target="_blank">
-                        <md-icon svgIcon="instagram_black" style="font-size: 22px;height: 22px; width: 22px;"></md-icon> &nbsp;&nbsp; Instagram
+                <mat-menu #categoria="matMenu">
+                    <button mat-menu-item class="btn-menu-item" (click)="sidenav.toggle(); activeMenu()">Categoria 1</button>
+                    <button mat-menu-item class="btn-menu-item" (click)="sidenav.toggle(); activeMenu()">Categoria 2</button>
+                </mat-menu>
+            </mat-nav-list>
+            <mat-divider></mat-divider>
+            <mat-list>
+                <h3 mat-subheader>Redes sociais</h3>
+                <mat-nav-list style="padding-top: 0px;">
+                    <a mat-list-item href="https://www.instagram.com/trindadethais/" target="_blank">
+                        <mat-icon svgIcon="instagram_black" style="font-size: 22px;height: 22px; width: 22px;"></mat-icon> &nbsp;&nbsp; Instagram
                     </a>
-                    <a md-list-item href="https://www.facebook.com/trindadethaiss/" target="_blank">
-                        <md-icon svgIcon="facebook_black" style="font-size: 22px;height: 22px; width: 22px;"></md-icon> &nbsp;&nbsp; Facebook
+                    <a mat-list-item href="https://www.facebook.com/trindadethaiss/" target="_blank">
+                        <mat-icon svgIcon="facebook_black" style="font-size: 22px;height: 22px; width: 22px;"></mat-icon> &nbsp;&nbsp; Facebook
                     </a>
-                    <a md-list-item href="https://twitter.com/trindadethaiss" target="_blank">
-                        <md-icon svgIcon="twitter_black" style="font-size: 22px;height: 22px; width: 22px;"></md-icon> &nbsp;&nbsp; Twitter
+                    <a mat-list-item href="https://twitter.com/trindadethaiss" target="_blank">
+                        <mat-icon svgIcon="twitter_black" style="font-size: 22px;height: 22px; width: 22px;"></mat-icon> &nbsp;&nbsp; Twitter
                     </a>
-                </md-nav-list>
-            </md-list>
-        </md-sidenav>
+                </mat-nav-list>
+            </mat-list>
+        </mat-sidenav>
         <div style="margin-top: 50px;flex-shrink: 0">
             <router-outlet></router-outlet>
         </div>
-    </md-sidenav-container>
+    </mat-sidenav-container>
 </div>
 <div *ngIf="!mobile">
     <router-outlet></router-outlet>
