--- a/BlogTravelWebApp/src/app/pages/home/components/back-to-top/back-to-top.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/back-to-top/back-to-top.component.html
@@ -1,3 +1,3 @@
-<button id="btn-right"  mdTooltip="Voltar ao topo!" mdTooltipPosition="above" md-fab class="btn-right-size btn-right-top" (click)="backToTop()">
-   <md-icon>&#xE316;</md-icon>
+<button id="btn-right"  matTooltip="Voltar ao topo!" matTooltipPosition="above" mat-fab class="btn-right-size btn-right-top" (click)="backToTop()">
+   <mat-icon>&#xE316;</mat-icon>
 </button>
