Add Disqus(to comments) in the posts

--- a/BlogTravelWebApp/src/app/pages/home/components/posts/posts.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/posts/posts.component.html
@@ -103,6 +103,7 @@
         </div>
       </div>
     </div>
+    
   </div>
   <div fxLayout="row" *ngIf="posts.length > 0 && idPost == null">
     <div fxFlex fxLayoutAlign="center center">
@@ -110,4 +111,5 @@
       nextLabel=""></pagination-controls>
     </div>
   </div>
+  <app-disqus *ngIf="idPost" [id]=idPost></app-disqus>
 </div>
