--- a/BlogTravelWebApp/src/app/pages/home/components/posts/components/disqus/disqus.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/posts/components/disqus/disqus.component.html
@@ -1,1 +1,4 @@
-<disqus *ngIf="idPost" [identifier]="idPost"></disqus>
+<disqus *ngIf="idPost" [identifier]="idPost" (onNewComment)="onReady($event)" (onReady)="onReady($event)" (onPaginate)="onReady($event)"></disqus>
+
+
+
