--- a/BlogTravelWebApp/src/app/components/shared/head-bar/components/sub-menu/sub-menu.component.html
+++ b/BlogTravelWebApp/src/app/components/shared/head-bar/components/sub-menu/sub-menu.component.html
@@ -1,35 +1,39 @@
 <div fxLayout="row" fxFlex="100" style="width: 100%;padding: 12px;">
   <div fxLayout="row" fxLayoutAlign="start center" style="width: 100%;">
-    <button mat-button class="sub-menu" fxFlex="6" (click)="home()">Home</button>
-    <button *ngIf="continents.length > 0" mat-button [matMenuTriggerFor]="destinos" class="sub-menu" fxFlex.md="17" fxFlex.lg="13" fxFlex.xl="11">Destinos</button>
+    <button mat-button class="sub-menu" (click)="home()">Home</button>
+    <button *ngIf="continents.length > 0" mat-button [matMenuTriggerFor]="destinos" class="sub-menu">Destinos</button>
     <mat-menu #destinos="matMenu">
       <span *ngFor="let continent of continents">
         <button mat-menu-item class="btn-menu-item" [routerLink]="['/post/destino/', continent]">{{continent}}</button>
       </span>
     </mat-menu>
-    <button *ngIf="categories.length > 0" mat-button [matMenuTriggerFor]="category" class="sub-menu" fxFlex.md="18" fxFlex.lg="14" fxFlex.xl="12">Categorias</button>
+    <button *ngIf="categories.length > 0" mat-button [matMenuTriggerFor]="category" class="sub-menu">Categorias</button>
     <mat-menu #category="matMenu">
       <span *ngFor="let category of categories">
         <button mat-menu-item class="btn-menu-item" [routerLink]="['/post/categoria/', category]">{{category}}</button>
       </span>
     </mat-menu>
-    <button mat-button class="sub-menu" fxFlex.md="17" fxFlex.lg="13" fxFlex.xl="11">Contato</button>
-    <button *ngIf="logged" mat-button [matMenuTriggerFor]="postagem" class="sub-menu" fxFlex.md="18" fxFlex.lg="14" fxFlex.xl="12">Postagem</button>
+    <button mat-button class="sub-menu">Contato</button>
+    <button *ngIf="logged" mat-button [matMenuTriggerFor]="postagem" class="sub-menu">Postagem</button>
     <mat-menu #postagem="matMenu">
-        <button mat-menu-item class="btn-menu-item" (click)="newPost()">Nova Postagem</button>
-        <button mat-menu-item class="btn-menu-item" (click)="openDialogPostsInactive()">Postagens inativas</button>
+      <button mat-menu-item class="btn-menu-item" (click)="newPost()">Nova Postagem</button>
+      <button mat-menu-item class="btn-menu-item" (click)="openDialogPostsInactive()">Postagens inativas</button>
     </mat-menu>
   </div>
   <div fxLayout="row" fxLayoutAlign="end center" style="width: 100%;">
-    <div style="padding: 25px;" fxLayout="row" fxLayoutAlign="end center">
-      <mat-icon style="color: #fff">search</mat-icon>&nbsp;&nbsp;
-      <input class="input-pesquisa txt-input-pesquisa" type="text" placeholder="Pesquisar..." /> &nbsp;&nbsp;
-      <button mat-icon-button>
-        <mat-icon style="color:#fff">close</mat-icon>
+    <div style="padding-right: 2%" fxLayout="row" fxLayoutAlign="initial center">
+      <div *ngIf="search">
+        <button mat-icon-button>
+          <mat-icon class="menu-icon">close</mat-icon>
+        </button>
+          <input [autofocus]="search" class="input-pesquisa txt-input-pesquisa" type="text" placeholder="Pesquisar..." />
+      </div>
+      <button mat-icon-button (click)="verifySearch()">
+        <mat-icon class="menu-icon">search</mat-icon>&nbsp;&nbsp;
       </button>
     </div>
     <button *ngIf="logged" mat-icon-button [matMenuTriggerFor]="configAuthor" fxFlex="5" style="right: 5px;">
-        <mat-icon style="color: #fff">&#xE5D4;</mat-icon>
+      <mat-icon class="menu-icon">&#xE5D4;</mat-icon>
     </button>
     <mat-menu #configAuthor="matMenu">
       <button mat-menu-item class="btn-menu-item">
