--- a/BlogTravelWebApp/src/app/components/shared/head-bar/head-bar.component.html
+++ b/BlogTravelWebApp/src/app/components/shared/head-bar/head-bar.component.html
@@ -1,3 +1,8 @@
 <div fxLayout="row" fxFlex="100" class="nav-bar">
-        <app-sub-menu style="width: 100%;"></app-sub-menu>       
+        <div fxFlex.md="5" fxFlex.lg="10" fxFlex.xl="20" fxLayoutAlign="center start" [style.xs]="{display: 'none'}" [style.sm]="{display: 'none'}">
+                <div fxLayout="column"></div>
+        </div>
+        <div fxFlex fxLayoutAlign=" center">
+                 <app-sub-menu style="width: 100%;"></app-sub-menu>
+        </div>    
 </div>
