--- a/BlogTravelWebApp/src/app/pages/home/components/facebook/facebook.component.html
+++ b/BlogTravelWebApp/src/app/pages/home/components/facebook/facebook.component.html
@@ -2,13 +2,14 @@
   <div fxFlex.sm="90" fxFlex.md="90" fxFlex.lg="80" fxFlex.xl="80" style="overflow: hidden;">
     <div fxLayout="column">
       <h2 class="facebook">Facebook</h2>
-      <div class="fb-page" style="padding: 2px;" data-href="https://www.facebook.com/trindadethaiss/" 
+      <!-- <div class="fb-page" style="padding: 2px;" data-href="https://www.facebook.com/trindadethaiss/" 
            data-tabs="timeline" data-height="600" data-small-header="false"
         data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
         <blockquote cite="https://www.facebook.com/trindadethaiss/" class="fb-xfbml-parse-ignore">
           <a href="https://www.facebook.com/trindadethaiss/">Thais Trindade</a>
         </blockquote>
-      </div>
+      </div> -->
+      <!-- <fb-page href="https://www.facebook.com/trindadethaiss"></fb-page> -->
     </div>
   </div>
 </div>
